# mkcollector

./: .gitignore  CMakeLists.txt  MKBuild.yaml  README.md  integration-tests.cpp  mkcollector.hpp  mkreport.cpp  mkreport.h  mkreport.hpp  tests.cpp
